# crypto-copy-trading-platform

./: .env.example  .env.prod.example  .gitignore  README.md  docker-compose.prod.storage.yml  docker-compose.prod.yml  docker-compose.storage.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: main.py
backend/tests/: conftest.py  test_admin_observability_api.py  test_admin_storage.py  test_audit_log_append_only_migration.py  test_backup_retention_cleanup.py  test_backup_script_alerts.py  test_configurable_storage.py  test_dependency_health_monitor.py  test_dependency_health_monitor_worker.py  test_emergency_stop.py  test_exchange_adapters.py  test_external_alert_smoke_test_worker.py  test_external_alerts.py  test_gexbot_market_data.py  test_health.py  test_metrics.py  test_mfa.py  test_notification_service.py  test_observability_service.py  test_operational_alert_runtime.py  test_operational_alerts.py  test_order_state_machine.py  test_password_change.py  test_phase4_final_release_check.py  test_phase4_readiness.py  test_phase4_small_fund_order_window.py  test_phase4_small_fund_review.py  test_position_reconciliation.py  test_postgres_backup.py  test_postgres_restore_drill.py  test_production_compose.py  test_public_market_data.py  test_rate_limit_service.py  test_real_balances.py  test_real_open_orders.py  test_real_read_only_check.py  test_reauthentication.py  test_reconciliation_hooks.py  test_reconciliation_persistence.py  test_reconciliation_repair.py  (+30 more)
(+184 files in other folders)
